little bug corrected, and added prediction for the v2